decreased memory limit for SBT